# cleerout

./: Dockerfile  pyproject.toml  requirements.txt
db/: chroma.sqlite3
src/cleeroute/: crew.py  main.py  models.py
src/cleeroute/config/: agents.yaml  tasks.yaml
