[project]
name = "cleeroute"
version = "0.1.0"
description = "cleeroute using crewAI"
authors = [{ name = "Mohamed nchourupouo", email = "nchourupouom04@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
cleeroute = "cleeroute.main:run"
run_crew = "cleeroute.main:run"
train = "cleeroute.main:train"
replay = "cleeroute.main:replay"
test = "cleeroute.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
